# SFAV

./: AutoPilotAddressFile.txt  CMakeLists.txt  README  avmsf_config.h  config.txt  doxy_config  main.cpp  sfav_config.h
Config_Files/: config.json  config_basicdemo.json  config_demo2vehicles.json  px4_hil_navio+.config  px4_hitl_basicdemo.config
Config_Files/PX4_conf/: px4_hil_navio+.config
Config_Files/SFAV_conf/: config_basicdemo_sitl.json
include/: autopilot_interface.h  gs_interface.h  ma_manager.h  main.h  scheduler_class.h  serial_port.h  sim_manager.h  simulator_interface.h  udp_port.h  ue_interface.h
include/DynModel_grt_rtw/: DynModel.bat  DynModel.c  DynModel.h  DynModel.mk  DynModel_data.c  DynModel_private.h  DynModel_types.h  buildInfo.mat  build_exception.mat  codeInfo.mat  defines.txt  modelsources.txt  multiword_types.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
include/ptask/src/: Makefile  Makefile.deps  libptask.so.1.0.1  ptask.c  ptask.h
include/simulink/src/: sfun_tstart.c  sfuntmpl_doc.c  sfuntmpl_fortran.F  simulink.F
src/: autopilot_interface.cpp  gs_interface.cpp  ma_manager.cpp  scheduler_class.cpp  serial_port.cpp  sim_manager.cpp  simulator_interface.cpp  udp_port.cpp  ue_interface.cpp
